fixed side spacing

--- a/makeupMatcher/makeupApp/static/styles/results.css
+++ b/makeupMatcher/makeupApp/static/styles/results.css
@@ -38,7 +38,8 @@ form {
 }
 
 #filterPadding {
-    padding-right: 2%;
+    padding-right: 1%;
+    margin: 0;
 }
 
 #alignText {
